--- a/style.css
+++ b/style.css
@@ -2,3 +2,18 @@
     text-align: center;
     margin-top: 20%;
 }
+
+
+/* code for creating own button stayle  */
+
+/* button */
+/* padding: 10px 15px 10px 15px;  */
+/* border-radius: 3px; */
+/* background-color: whatever color you want */
+/* font-size: 16px; */
+/* outline: none; */
+/* transition: 1s; */
+
+/* button: hover{ */
+    /* color:white */
+    /* background-color: gray; */
